--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^10.0.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   },
