--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.51.0",
+    "@types/node": "^24.2.1",
     "@types/uuid": "^10.0.0",
     "cohere-ai": "^7.18.0",
     "cors": "^2.8.5",
